# Agent-Echo

./: .gitignore  CLAUDE.md  README.md  anthropic_fallback.py  cli.py  config_loader.py  dashboard.html  dashboard_server.py  linkedin_agent.db-shm  linkedin_agent.db-wal  linkedin_agent_implementation_roadmap.md  linkedin_agent_track_a.md  orchestrator.py  pyproject.toml
.serena/: project.yml
aggregator/: daily_digest.py
capture/: browser_watcher.py  file_watcher.py  github_watcher.py  notion_watcher.py
config/: exclusions.yaml  pillars.yaml  posting_cadence.yaml  voice_profile.md
db/: db.py  schema.sql  vector_db.py
feedback/: weekly_review.py
generator/: agent_graph.py  audio_engine.py  beat_sync.py  conceptual_image_selector.py  draft_generator.py  format_selector.py  manim_generator.py  media_handler.py  music_director.py  pillar_classifier.py  visual_selector.py
notification/: router.py  state.py  telegram_bot.py  telegram_channel.py
observability/: health_check.py  tracer.py
publisher/: linkedin_client.py  oauth.py  scheduler.py  twitter_client.py
remotion/: package-lock.json  package.json  remotion.config.ts
scratch/: generate_launch_video.py  list_voices.py  send_launch_video.py  test_intent.py  test_manim_direct.py  test_manim_pipeline.py
tests/: test_agent_graph.py  test_audio_engine.py  test_beat_sync.py  test_chat_sessions.py  test_content_queue.py  test_dashboard.py  test_fallback.py  test_file_watcher.py  test_manim_generator.py  test_media_handler.py  test_music_director.py  test_oauth.py  test_observability.py  test_telegram.py  (+5 more)
(+40 files in other folders)
