[project]
name = "agent-echo"
version = "0.1.0"
description = "LinkedIn Content Agent - Track A"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "keyring>=24.3.0",
    "APScheduler>=3.10.0",
    "python-telegram-bot>=20.8",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.0",
    "img2pdf>=0.5.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "langgraph>=0.0.15",
    "langchain-core>=0.1.30",
    "langchain-anthropic>=0.1.0",
    "lancedb>=0.6.0",
    "openai>=1.12.0",
    "watchdog>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "db",
    "capture",
    "aggregator",
    "generator",
    "notification",
    "publisher",
    "feedback",
    "observability"
]
py-modules = ["cli", "orchestrator", "config_loader"]
